Add contact info

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                     <div class="contact-info">
                         <p><strong>株式会社明王総建</strong></p>
                         <p>〒874-0840 大分県別府市大字鶴見2641-1</p>
-                        <!-- <p>TEL: 0977-XX-XXXX</p> -->
+                        <p>TEL: 0977-26-5851</p>
+                        <p><a href="https://www.instagram.com/meiou.so_uken/" target="_blank" rel="noopener noreferrer">Instagram: @meiou.so_uken</a></p>
                     </div>
                 </div>
             </div>
